# SnapDetect

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compare.py  main.cpp  main.py
include/: SnapDetect.h  TemplateDetect.h  Utils.h  WindowCapture.h
source/: SnapDetect.cpp  TemplateDetect.cpp  Utils.cpp  WindowCapture.cpp
